--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Prozentur</string>
-    <string name="appwidget_text">EXAMPLE</string>
+    <string name="appwidget_text">0.00%</string>
     <string name="add_widget">Add widget</string>
 </resources>
